--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "512ks",
   "productName": "512考试教育网",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "512ks app for windows",
   "author": {
     "name": "512ks",
@@ -29,6 +29,12 @@
   },
   "build": {
     "appId": "com.kyee.512ks",
+    "extraResources": [
+      "logo*.ico"
+    ],
+    "win": {
+      "publisherName": "Kyee Inc"
+    },
     "nsis": {
       "oneClick": false,
       "perMachine": true,
