--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "512ks",
   "productName": "512考试教育网",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "512ks app for windows",
   "author": {
     "name": "512ks",
@@ -14,8 +14,10 @@
   "scripts": {
     "start": "electron .",
     "package": "electron-packager . 512考试教育网 --overwrite --asar=true --platform=win32 --arch=ia32 --icon=logo-64.ico --prune=true --out=build",
-    "build": "electron-builder --ia32",
-    "publish": "build --ia32 -p always"
+    "build:win": "electron-builder --win --ia32",
+    "publish:win": "build --win --ia32 -p always",
+    "build:mac": "electron-builder --mac",
+    "publish:mac": "build --mac -p always"
   },
   "devDependencies": {
     "electron": "^5.0.0",
